--- a/webstart/webstart-maven-plugin/pom.xml
+++ b/webstart/webstart-maven-plugin/pom.xml
@@ -266,7 +266,7 @@
 					<scope>runtime</scope>
 				</dependency>
 				<dependency>
-					<groupId>org.codehaus.mojo</groupId>
+					<groupId>com.barchart.webstart</groupId>
 					<artifactId>keytool-api-1.6</artifactId>
 				</dependency>
 			</dependencies>
@@ -284,7 +284,7 @@
 					<scope>runtime</scope>
 				</dependency>
 				<dependency>
-					<groupId>org.codehaus.mojo</groupId>
+					<groupId>com.barchart.webstart</groupId>
 					<artifactId>keytool-api-1.5</artifactId>
 				</dependency>
 			</dependencies>
