--- a/webstart/pom.xml
+++ b/webstart/pom.xml
@@ -290,7 +290,7 @@
 			<dependency>
 				<groupId>org.apache.ant</groupId>
 				<artifactId>ant</artifactId>
-				<version>1.7.0</version>
+				<version>[1.10.9,)</version>
 			</dependency>
 
 			<dependency>
@@ -302,7 +302,7 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.9</version>
+				<version>[4.13.1,)</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
